support -proc:full option requirement (IDEA-359954)
(cherry picked from commit 5509dc25f0934fbdfc801b3780e8f72d4f7be7e9)

IJ-CR-146769

GitOrigin-RevId: deda4a64d2305843841b88b8c7e0743a176331d2